# BMSTU-projects

./: .gitignore  README.md
classes_and_inheritance/HW_classes_and_inheritance/: HW_classes_and_inheritance.sln
classes_and_inheritance/HW_classes_and_inheritance/Part1/: Application.cpp  Application.h  Date.cpp  Date.h  Part1.vcxproj  Part1.vcxproj.filters  Payment.cpp  Payment.h
classes_and_inheritance/HW_classes_and_inheritance/Part1/Debug/: Part1.exe.recipe  Part1.ilk  vc142.idb
classes_and_inheritance/HW_classes_and_inheritance/Part1/Debug/Part1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Part1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
classes_and_inheritance/HW_classes_and_inheritance/Part2/: Application.cpp  Application.h  Array.cpp  Array.h  Hex.cpp  Hex.h  Octal.cpp  Octal.h  OutOfRangeException.cpp  OutOfRangeException.h  Part2.vcxproj  Part2.vcxproj.filters  main.cpp
classes_and_inheritance/HW_classes_and_inheritance/Part2/Debug/: Part2.exe.recipe  vc142.idb
classes_and_inheritance/HW_classes_and_inheritance/Part2/Debug/Part2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
classes_and_inheritance/HW_classes_and_inheritance/Part3/: Application.cpp  Application.h  Money124.cpp  Money124.h  Money133.cpp  Money133.h  Pair.cpp  Pair.h  Part3.vcxproj  Part3.vcxproj.filters  main.cpp
classes_and_inheritance/HW_classes_and_inheritance/Part3/Debug/: Part3.exe.recipe  Part3.ilk  vc142.idb
classes_and_inheritance/HW_classes_and_inheritance/Part3/Debug/Part3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
fe_grid_loader/: MeshExample.txt
fe_grid_loader/fe_gl/: AneuMeshLoader.cpp  AneuMeshLoader.h  CMakeLists.txt  MeshLoader.cpp  MeshLoader.h  Structures.h  main.cpp
libraries/Lab1_Libraries/: Lab1_Libraries.sln
libraries/Lab1_Libraries/Debug/: DynamicLib.exp  DynamicLib.lib  StaticLib.idb  StaticLib.lib
libraries/Lab1_Libraries/DynamicLib/: DynamicLib.vcxproj  DynamicLib.vcxproj.filters  bubbleSortDynamic.cpp  bubbleSortDynamic.h
libraries/Lab1_Libraries/DynamicLib/Debug/: DynamicLib.dll.recipe  DynamicLib.ilk  vc142.idb
libraries/Lab1_Libraries/DynamicLib/Debug/DynamicLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DynamicLib.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libraries/Lab1_Libraries/LabLibrariesSarpi/: LabLibrariesSarpi.vcxproj  Main.cpp
libraries/Lab1_Libraries/LabLibrariesSarpi/Debug/: LabLibrariesSarpi.exe.recipe  vc142.idb
libraries/Lab1_Libraries/LabLibrariesSarpi/Debug/LabLibra.99094e71.tlog/: LabLibrariesSarpi.lastbuildstate
libraries/Lab1_Libraries/StaticLib/: StaticLib.vcxproj  StaticLib.vcxproj.filters  bubbleSortStatic.cpp  bubbleSortStatic.h
libraries/Lab1_Libraries/StaticLib/Debug/StaticLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
operator_overloading/operator_overloading/: IncompatibleDimException.cpp  IncompatibleDimException.h  Main.cpp  Matrix.cpp  Matrix.h  OutOfRangeException.cpp  OutOfRangeException.h  Vector.cpp  Vector.h
qt_calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  MainWindow.cpp  MainWindow.h  Toggle.cpp  Toggle.h  qt_calculator.pro
qt_calculator/media/: source.qrc  styles.qss
qt_notepad/: CMakeLists.txt  FileTabWidget.cpp  FileTabWidget.h  MainWindow.cpp  MainWindow.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TextEditor.cpp  TextEditor.h  highlight.qrc  highlight_rules.xml  main.cpp  qt_notepad.pro  styles.qrc  styles.qss
qt_notepad/CustomEnvironment/: CustomContext.cpp  CustomContext.h  CustomSplashScreen.cpp  CustomSplashScreen.h  DraggableMenuBar.h
qt_notepad/Font/: font.qrc
qt_notepad/Icons/: Icons.qrc
qt_notepad/SplashScreens/: screens.qrc
qt_xml/: CMakeLists.txt  CustomSplashScreen.cpp  CustomSplashScreen.h  DraggableMenuBar.cpp  MainWindow.cpp  MainWindow.h  XML_Model.cpp  XML_Model.h  main.cpp  qt_xml.pro  styles.qss
qt_xml/Data/: Animals.xml  Mechet.xml  Museums.xml  WiFi.xml
qt_xml/Icons/: icons.qrc
qt_xml/SplashScreens/: screens.qrc
stl/stl/: Algorithms.h  Container.h  Exceptions.cpp  Exceptions.h  Iterator.h  Main.cpp
stl_iostreams/: CMakeLists.txt
stl_iostreams/part_1_sequential_containers/: Application.h  CMakeLists.txt  CreateData.cpp  CreateData.h  LoadData.h  Modify.h  OutputResult.h  main.cpp  result.txt  test.txt
stl_iostreams/part_2_associative_containers/: CMakeLists.txt  Client.h  ClientMap.cpp  ClientMap.h  Date.cpp  Date.h  Time.cpp  Time.h  main.cpp  output_test.txt
